# jmm

./: .gitignore  README.md  meson.build
examples/3d_wedge/: 3d_wedge.c  3d_wedge.h  mesh3_extra.cpp
include/jmm/: eik3.h  utd.h
src/: eik3.c  utd.c
subprojects/: cgreen.wrap
test/: all_tests.c  meson.build  test_alist.c  test_array.c  test_bb3.c  test_bb3tet.c  test_bb3tri.c  test_bicubic.c  test_bmesh33.c  test_camera.c  test_config.h.in  test_dbl22.c  test_dbl44.c  test_eik3.c  test_geom.c  test_mesh2.c  test_mesh3.c  test_opt.c  test_utd.c  test_utri.c  test_vec.c
